src/PJ/POCO/TEST/NEG/NVARFUNC.POC
/* Make sure can't use an array as a function */
#pragma poco echo "expect>trying to call something that's not a function"

int not_a_func[2];

main()
{
not_a_func();
puts("This should not compile");
}
